# api/swagger-output.json
@@ -84,7 +84,7 @@
           "회원"
         ],
         "summary": "회원 가입",
-        "description": "회원 가입을 합니다.<br>회원 가입을 완료한 후 회원 정보를 반환합니다.<br>",
+        "description": "회원 가입을 합니다.<br>회원 가입을 완료한 후 회원 정보를 반환합니다.",
         "responses": {
           "201": {
             "description": "성공",
@@ -141,10 +141,10 @@
                 "$ref": "#components/schemas/createUser"
               },
               "examples": {
-                "필수 속성만 지정한 경우": {
+                "기본 속성": {
                   "$ref": "#/components/examples/createUser"
                 },
-                "extra 속성을 추가한 경우": {
+                "extra 속성": {
                   "$ref": "#/components/examples/createUserWithExtra"
                 }
               }
@@ -203,7 +203,7 @@
           "회원"
         ],
         "summary": "로그인",
-        "description": "이메일과 비밀번호를 입력해 로그인을 합니다.<br>응답 데이터에 token 속성으로 JWT 기반의 Access Token과 Refresh Token을 반환합니다.<br>이후 로그인이 필요한 모든 요청에는 Authorization 헤더에 Bearer 방식의 Access Token을 보내야 합니다.",
+        "description": "이메일과 비밀번호를 입력해 로그인을 한다.<br>응답 데이터에 token 속성으로 JWT 기반의 Access Token과 Refresh Token을 반환한다.<br>이후 로그인이 필요한 모든 요청에는 Authorization 헤더에 Bearer 방식의 Access Token을 보내야 한다.",
         "responses": {
           "200": {
             "description": "로그인 성공",
@@ -265,7 +265,7 @@
           "회원"
         ],
         "summary": "회원 정보 조회(단일 속성)",
-        "description": "지정한 회원 속성 하나를 조회합니다.",
+        "description": "회원 정보 중 한가지 속성을 조회한다.",
         "parameters": [
           {
             "name": "_id",
@@ -348,7 +348,7 @@
           "회원"
         ],
         "summary": "회원 정보 조회(모든 속성)",
-        "description": "회원의 모든 속성을 조회합니다.",
+        "description": "회원 정보의 모든 속성을 조회한다.",
         "parameters": [
           {
             "name": "_id",
@@ -419,7 +419,7 @@
           "회원"
         ],
         "summary": "회원 정보 수정",
-        "description": "회원 정보를 수정합니다.",
+        "description": "회원 정보를 수정한다.",
         "parameters": [
           {
             "name": "_id",
@@ -1952,50 +1952,117 @@
         }
       }
     },
-    "/bookmarks/": {
+    "/bookmarks/{type}/{target_id}": {
       "post": {
         "tags": [
           "북마크"
         ],
-        "summary": "북마크 등록",
-        "description": "지정한 상품을 북마크에 추가합니다.",
+        "summary": "북마크 추가",
+        "description": "상품 | 사용자 | 게시글을 북마크에 추가합니다.",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "북마크 종류 (product | user | post)",
+            "example": "product"
+          },
+          {
+            "name": "target_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "북마크 대상 id (상품 id | 사용자 id | 게시글 id)",
+            "example": "2"
+          }
+        ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/createUserResWithExtra"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "인증 실패",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error401"
+                }
+              }
+            }
           },
           "409": {
-            "description": "Conflict"
+            "description": "이미 추가된 북마크",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error409"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "입력값 검증 오류",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error422"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 에러",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error500"
+                }
+              }
+            }
           }
         },
         "security": [
           {
             "Access Token": []
           }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "example": "any"
-                  },
-                  "target_id": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
+        ]
       },
       "get": {
         "tags": [
           "북마크"
         ],
-        "summary": "북마크 목록 조회",
-        "description": "사용자의 북마크 목록을 조회한다.",
+        "summary": "북마크 한건 조회",
+        "description": "지정한 상품|사용자|게시글에 대한 나의 북마크 정보를 조회합니다.",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "target_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -2008,16 +2075,16 @@
         ]
       }
     },
-    "/bookmarks/products/{product_id}": {
+    "/bookmarks/{type}": {
       "get": {
         "tags": [
           "북마크"
         ],
-        "summary": "북마크 한건 조회",
-        "description": "지정한 상품에 대한 나의 북마크 정보를 조회한다.",
+        "summary": "북마크 목록 조회",
+        "description": "사용자의 북마크 목록을 조회합니다.",
         "parameters": [
           {
-            "name": "product_id",
+            "name": "type",
             "in": "path",
             "required": true,
             "schema": {
